incubator/phpfpm-app/0.1.8/README.md
# phpfpm-app

![Version: 0.1.8](https://img.shields.io/badge/Version-0.1.8-informational?style=flat-square) ![Type: application](https://img.shields.io/badge/Type-application-informational?style=flat-square) ![AppVersion: 0.1.0](https://img.shields.io/badge/AppVersion-0.1.0-informational?style=flat-square)

A Sample app with multiple containers (phpfpm-app, mariadb, nginx).

**Homepage:** <https://github.com/truecharts/apps/master/charts/incubator/spotweb>

## Maintainers

| Name | Email | Url |
| ---- | ------ | --- |
| TrueCharts | info@truecharts.org | https://truecharts.org |

## Source Code

* <https://github.com/spotweb/spotweb>
* <https://hub.docker.com/r/jgeusebroek/spotweb>

## Requirements

Kubernetes: `>=1.16.0-0`

| Repository | Name | Version |
|------------|------|---------|
| https://truecharts.org/ | mariadb | 1.0.30 |
| https://truecharts.org | common | 8.9.18 |

## Values

| Key | Type | Default | Description |
|-----|------|---------|-------------|
| env | string | `nil` |  |
| image.pullPolicy | string | `"IfNotPresent"` |  |
| image.repository | string | `"jbaten/phpfpm-app"` |  |
| image.tag | string | `"0.1.0@sha256:f9b813042e5e35c36e19b67029f010b7b5f85688081549960b7eabbd351b72d7"` |  |
| mariadb.enabled | bool | `true` |  |
| mariadb.existingSecret | string | `"mariadbcreds"` |  |
| mariadb.mariadbDatabase | string | `"mini"` |  |
| mariadb.mariadbUsername | string | `"mini"` |  |
| nginxImage.pullPolicy | string | `"IfNotPresent"` |  |
| nginxImage.repository | string | `"bitnami/nginx"` |  |
| nginxImage.tag | string | `"latest"` |  |
| persistence.config.enabled | bool | `true` |  |
| persistence.config.mountPath | string | `"/config"` |  |
| podSecurityContext.runAsGroup | int | `0` |  |
| podSecurityContext.runAsUser | int | `0` |  |
| probes.liveness.enabled | bool | `false` |  |
| probes.readiness.custom | bool | `true` |  |
| probes.readiness.enabled | bool | `true` |  |
| probes.readiness.spec.initialDelaySeconds | int | `10` |  |
| probes.readiness.spec.tcpSocket.port | int | `9000` |  |
| probes.readiness.spec.timeoutSeconds | int | `5` |  |
| probes.startup.enabled | bool | `false` |  |
| securityContext.readOnlyRootFilesystem | bool | `false` |  |
| securityContext.runAsNonRoot | bool | `false` |  |
| service.main.ports.main.port | int | `11000` |  |
| service.main.ports.main.targetPort | int | `80` |  |
| service.main.selector."app.kubernetes.io/instance" | string | `"{{ .Release.Name }}"` |  |
| service.main.selector."app.kubernetes.io/name" | string | `"{{ include \"common.names.name\" . }}-nginx"` |  |
| service.main.type | string | `"Simple"` |  |
| service.phpfpm.enabled | bool | `true` |  |
| service.phpfpm.ports.phpfpm.enabled | bool | `true` |  |
| service.phpfpm.ports.phpfpm.port | int | `9000` |  |
| service.phpfpm.ports.phpfpm.targetPort | int | `9000` |  |
| service.phpfpm.type | string | `"ClusterIp"` |  |

----------------------------------------------
Autogenerated from chart metadata using [helm-docs v1.5.0](https://github.com/norwoodj/helm-docs/releases/v1.5.0)
